--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section class="apresentacao" id="aps">
             <div class="containeraps">
-                <div class="nome"><h1>Francisco Antonio Dantas de Sousa</h1></div>
+                <div class="titulo"><h1>Francisco Antonio Dantas de Sousa</h1></div>
                 <div class="func"><h3>Computer Science Student</h3></div>
                 <div class="btn"><button id="btn_in"><a href="#about">Read More →</a></button></div>
             </div>
