--- a/index.html
+++ b/index.html
@@ -117,9 +117,7 @@
                             <input type="email" name="email" id="emailid" placeholder="fulano@mail.com" required />
                         </p>
                         <p>
-                            <textarea placeholder="mensagem" required="required">
-        
-                            </textarea>
+                            <textarea placeholder="mensagem" required="required"></textarea>
                         </p>
                         <button type="submit" form="meu_form">Enviar</button>
                     </form>
