--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         </p>
                         <input type="hidden" name="_subject" value="Novo envio!">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="http://127.0.0.1:5500/envio.html">
+                        <input type="hidden" name="_next" value="https://franciscodantas.github.io/envio.html">
                         <input type="hidden" name="_template" value="box">
                         <button type="submit">Enviar</button>
                     </form>
