--- a/indexbr.html
+++ b/indexbr.html
@@ -17,22 +17,22 @@
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#education">Education</a>
-            <a href="#services">Services</a>
+            <a href="#about">Sobre</a>
+            <a href="#education">Educação</a>
+            <a href="#services">Serviços</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
-            <a href="indexbr.html" class="idioma"><img src="images/icons8-brazil-48.png" alt=""></a>
+            <a href="#contact">Contato</a>
+            <a href="index.html" class="idioma"><img src="images/icons8-usa-48.png" alt=""></a>
             <button id="btn"><i class='bx bx-sun' id="iconTheme"></i></button>
         </nav>
     </header>
 
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hello, It's Me</h3>
+            <h3>Olá, sou</h3>
             <h1>Francisco Dantas</h1>
-            <h3>And I'm a <span class="multiple-text"></span></h3>
-            <p>I am currently pursuing a Bachelor's degree in Computer Science from UFCG. Combining my technical skills with my academic background, I am committed to continuously developing myself and achieving success in the technology industry.</p>
+            <h3>E eu sou <span class="multiple-text"></span></h3>
+            <p>Atualmente, estou cursando o Bacharelado em Ciência da Computação na UFCG. Combinando minhas habilidades técnicas com minha formação acadêmica, estou empenhado em me desenvolver continuamente e alcançar o sucesso no setor de tecnologia.</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/franciscoantoniodantasdesousa/" target="_blank"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/franciscodantas/" target="_blank"><i class='bx bxl-github'></i></a>
@@ -53,30 +53,30 @@
         </div>
 
         <div class="about-content">
-            <h2 class="heading">About <span>Me</span></h2>
+            <h2 class="heading">Sobre <span>Mim</span></h2>
             <h3>FullStack Developer</h3>
-            <p>Hello! My name is Francisco Antonio Dantas de Sousa and I'm a technology professional with a wide range of skills. Throughout my career, I have participated in several national and regional robotics competitions as part of the Robossauros team from Sousa, where I was a champion in the FTC category in 2020. I have a fast learning ability and a strong aptitude for logic and mathematics.
+            <p>Olá! O meu nome é Francisco António Dantas de Sousa e sou um profissional de tecnologia com um vasto leque de competências. Ao longo da minha carreira, participei em várias competições nacionais e regionais de robótica como parte da equipa Robossauros de Sousa, onde fui campeão na categoria FTC em 2020. Tenho uma capacidade de aprendizagem rápida e uma forte aptidão para a lógica e a matemática.
 
-                I am currently pursuing a Bachelor's degree in Computer Science from UFCG. Combining my technical skills with my academic background, I am committed to continuously developing myself and achieving success in the technology industry.
+                Atualmente estou cursando Bacharelado em Ciência da Computação pela UFCG. Combinando minhas habilidades técnicas com minha formação acadêmica, estou empenhado em me desenvolver continuamente e alcançar o sucesso na indústria de tecnologia.
                 
-                I am open to opportunities that allow me to apply my skills and knowledge in technology, safety, and computing, as well as working as part of a team to achieve common goals. If you'd like to connect with me, please don't hesitate to get in touch. I'm always looking for new opportunities and partnerships.</p>
-            <a href="https://www.linkedin.com/in/franciscoantoniodantasdesousa/" class="btn" target="_blank">Read More</a>
+                Estou aberto a oportunidades que me permitam aplicar as minhas competências e conhecimentos em tecnologia, segurança e informática, bem como trabalhar em equipa para atingir objectivos comuns. Se quiser entrar em contacto comigo, não hesite em contactar-me. Estou sempre à procura de novas oportunidades e parcerias.</p>
+            <a href="https://www.linkedin.com/in/franciscoantoniodantasdesousa/" class="btn" target="_blank">Saiba mais</a>
         </div>
 
     </section>
 
     <section class="education" id="education">
 
-        <h2 class="heading">My <span>Education</span></h2>
+        <h2 class="heading">Minha <span>Educação</span></h2>
 
         <div class="education-container">
             <div class="formation">
-                <h3>High School</h3>
+                <h3>Ensino Médio</h3>
                 <h4>Escola do Serviço Social da Industria</h4>
                 <p>2018 - 2020</p>
             </div>
             <div class="formation">
-                <h3>Computer Science</h3>
+                <h3>Ciências da Computação</h3>
                 <h4>Universidade Federal de Campina Grande</h4>
                 <p>2020 - 2026</p>
             </div>
@@ -123,35 +123,35 @@
     </section>
 
     <section class="services" id="services">
-        <h2 class="heading">My <span>Services</span></h2>
+        <h2 class="heading">Meu <span>Serviços</span></h2>
 
         <div class="services-container">
             <div class="services-box">
                 <i class='bx bx-code-alt' ></i>
-                <h3>Website <br> Development</h3>
-                <p>Creation and development of elegant and innovative websites using HTML, CSS and Javascript</p>
-                <a href="https://github.com/franciscodantas/Calculator-UFCG" class="btn" target="_blank">Read More</a>    
+                <h3>Desenvolvimento <br> Web</h3>
+                <p>Criação e desenvolvimento de sites Web elegantes e inovadores utilizando HTML, CSS e Javascript</p>
+                <a href="https://github.com/franciscodantas/Calculator-UFCG" class="btn" target="_blank">Saiba mais</a>    
             </div>
 
             <div class="services-box">
                 <i class='bx bxs-bot'></i>
-                <h3>Application Development</h3>
-                <p>Creating and developing elegant and functional applications using Java and Python</p>
-                <a href="https://github.com/franciscodantas/locadora-plp" class="btn" target="_blank">Read More</a>    
+                <h3>Desenvolvimentode Aplicações</h3>
+                <p>Criar e desenvolver aplicações elegantes e funcionais utilizando Java e Python</p>
+                <a href="https://github.com/franciscodantas/locadora-plp" class="btn" target="_blank">Saiba mais</a>    
             </div>
 
             <div class="services-box">
                 <i class='bx bxs-data' ></i>
-                <h3>Database Development</h3>
-                <p>Creation and development of applications with Oracle SQL, such as the creation of triggers and functions</p>
-                <a href="https://github.com/franciscodantas/Projeto-BD" class="btn" target="_blank">Read More</a>    
+                <h3>Desenvolvimento de BD</h3>
+                <p>Criação e desenvolvimento de aplicações com Oracle SQL, como a criação de triggers e funções</p>
+                <a href="https://github.com/franciscodantas/Projeto-BD" class="btn" target="_blank">Saiba mais</a>    
             </div>
         </div>
 
     </section>
 
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">Latest <span>Project</span></h2>
+        <h2 class="heading">Últimos <span>Projetos</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
                 <img src="images/Work in (1).png" alt="">
@@ -211,21 +211,21 @@
     </section>
 
     <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me!</span></h2>
+        <h2 class="heading"><span>Me</span> Contacte</h2>
 
         <form action="#">
             <div class="input-box">
-                <input type="text" name="" id="" placeholder="Full Name">
-                <input type="email" name="" id="" placeholder="Email Address">
+                <input type="text" name="" id="" placeholder="Nome Completo">
+                <input type="email" name="" id="" placeholder="Email">
             </div>
 
             <div class="input-box">
-                <input type="tel" name="" id="" placeholder="Mobile Number">
-                <input type="text" name="" id="" placeholder="Email Subject">
+                <input type="tel" name="" id="" placeholder="Número do Celular">
+                <input type="text" name="" id="" placeholder="Assunto">
             </div>
 
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message" class="btn">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+            <input type="submit" value="Enviar" class="btn">
         </form>
     </section>
 
