--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#services">Services</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
-            <a href="indexbr.html" class="idioma"><img src="images/icons8-brazil-48.png" alt=""></a>
+            <a href="br.html" class="idioma"><img src="images/icons8-brazil-48.png" alt=""></a>
             <button id="btn"><i class='bx bx-sun' id="iconTheme"></i></button>
         </nav>
     </header>
